Fix overflow of KaTeX when longer than width of container

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -285,6 +285,10 @@ strong {
 .muted-text {
     color: #7A7B7C;
 }
+.katex-display {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
 .no-scroll {
     overflow: hidden;
     position: fixed;
